// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricCard > should combine metric value and comparison 1`] = `
<div>
  <div
    class="card card--default"
    data-slot="card"
  >
    <div
      class="card__header"
      data-slot="card-header"
    >
      <h4
        class="scroll-m-20 font-medium text-foreground text-xl tracking-tight"
      >
        COE Premiums
      </h4>
    </div>
    <div
      class="card__content"
      data-slot="card-content"
    >
      <div
        class="font-semibold tabular-nums text-4xl text-accent"
      >
        <span>
          0
        </span>
      </div>
    </div>
    <div
      class="card__footer"
      data-slot="card-footer"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="chip chip--success chip--primary"
          data-slot="chip"
        >
          <svg
            class="lucide lucide-arrow-up-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          11.1%
        </span>
        <span
          class="text-muted text-sm"
        >
          vs last month
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`MetricCard > should render with hero variant 1`] = `
<div>
  <div
    class="card card--default border-l-4 border-accent"
    data-slot="card"
  >
    <div
      class="card__header"
      data-slot="card-header"
    >
      <h4
        class="scroll-m-20 font-medium text-foreground text-xl tracking-tight"
      >
        Total Registrations
      </h4>
    </div>
    <div
      class="card__content"
      data-slot="card-content"
    >
      <div
        class="font-semibold tabular-nums text-5xl text-accent"
      >
        <span>
          0
        </span>
      </div>
    </div>
    <div
      class="card__footer"
      data-slot="card-footer"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="chip chip--success chip--primary"
          data-slot="chip"
        >
          <svg
            class="lucide lucide-arrow-up-right size-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 7h10v10"
            />
            <path
              d="M7 17 17 7"
            />
          </svg>
          11.1%
        </span>
        <span
          class="text-muted text-sm"
        >
          vs last month
        </span>
      </div>
    </div>
  </div>
</div>
`;
